# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.22.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix segfault for tests beginning with --end, see
	  http://bugs.gentoo.org/show_bug.cgi?id=350321
	- Minor fixes in zsh-completion

*eix-0.22.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add some experimental zsh-completion
	- eix-sync: New option -V, cancel -m, fix description of -u
	- eix-test-obsolete: Output {,accept_}keywords instead of keywords:
	  http://bugs.gentoo.org/show_bug.cgi?id=349352
	- Honour order of {,accept_}keywords
	- Use largefile support if available
	- Fix minor variable and manpage description issues
	- No longer support translations for true/yes/on in variable names
	- Make code c++0x clean

*eix-0.22.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix mask syntax if slots and repositories are used in the same mask,
	  see http://forums.gentoo.org/viewtopic-p-6479886.html
	- Fix NONEXISTENT_IF_MASKED (check not only keywords but also mask)
	- manpage: Explain logic of EXPRESSION more verbosely.
	- Divide memory usage of global*.cc during compiling more even.

*eix-0.22.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce eix-installed.
	- Rewrite eix-test-obsolete almost completely.
	- Do not require SA_SIGINFO (thanks Markus Duft <mduft at gentoo.org>)
	  http://bugs.gentoo.org/show_bug.cgi?id=343071
	- Add a forgotten translation to eix-installed-after

*eix-0.22.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support repository names in config files:
	  http://bugs.gentoo.org/show_bug.cgi?id=340098
	  The current implementation stores reponames in every version and
	  thus increases memory usage, but this is perhaps cleaner than to tie
	  the names to the database headers.
	- Convert manpage a-diaresis back to groff format (no utf8)

*eix-0.22.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Improve error handling when reading profile masks