@@ -2,6 +2,7 @@
 
 *eix-0.22.7
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Add option -f to eix-installed-after
 	- Fix segfault for tests beginning with --end, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=350321
 	- Minor fixes in zsh-completion
